This fixes #47, but doesn't add the ability to show icons in blurred tabs

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -43,6 +43,7 @@
             text-align: right;
             line-height: @tab-height;
             color: @text-color;
+            cursor: pointer;
             -webkit-animation: zoomOut 250ms ease;
             -webkit-animation-fill-mode: forwards;
 
@@ -203,6 +204,11 @@
             }
             .title {
                 -webkit-transition: none;
+            }
+            &:hover {
+                .close-icon {
+                    display: inline-block;
+                }
             }
         }
     }
